# zip-tool-app

./: LICENSE  README.md  package.json  tauri.conf.json
.github/workflows/: release.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
