[package]
name = "zip-tool-app"
version = "0.1.0"
description = "A simple ZIP tool built with Rust and Tauri"
authors = ["you"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
rfd = "0.12"

[features]
# デフォルトで必要な機能を有効化
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
